add task 2 and task 3